--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,7 +1,7 @@
 .background {
   background-color: #919dad;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -9,7 +9,7 @@
 .box {
   background-color: #ffefce;
   width: 650px;
-  height: 1100px;
+  height: 900px;
   align-self: center;
 
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
@@ -18,7 +18,19 @@
 
 .right {
   display: grid;
-  background-image: url("../components/images/signUp.png.png");
+  background-image: url("../components/images/test.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  place-self: right;
+  justify-self: start;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.right.log {
+  display: grid;
+  background-image: url("../components/images/Login.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -32,6 +44,9 @@
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   justify-self: end;
+  align-content: center;
+  display: grid;
+  grid-template-rows: min-content min-content min-content;
 }
 
 .left h1,
@@ -41,18 +56,14 @@
   margin-right: 40px;
 }
 
-.left h1 {
-  margin-top: 40px;
-}
 .terms {
   display: grid;
   grid-template-columns: 20px 1fr;
   align-content: center;
- 
 }
 
 .terms p {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 * {
@@ -98,7 +109,7 @@ h1 {
 .formy {
   display: grid;
   text-align: left;
-  grid-template-rows: repeat(14, 50px) 30px 50px;
+  grid-template-rows: repeat(11, 50px) 30px 50px;
 }
 .fullname {
   display: grid;
@@ -110,10 +121,10 @@ h1 {
   grid-template-rows: 1fr 1fr;
 }
 
-.formy.two {
+.formy.log {
   display: grid;
   text-align: left;
-  grid-template-rows: repeat(12, 50px) 20px 50px;
+  grid-template-rows: repeat(6, 50px) 20px 50px;
 }
 
 .formy label {
@@ -227,4 +238,33 @@ input[type="number"] {
   100% {
     margin-left: 0rem;
   }
+}
+
+/* main home page */
+.home-grid {
+  display: grid;
+  grid-template-rows: 100px min-content;
+  grid-template-columns: 100vw;
+}
+
+.nav {
+  background-color: inherit;
+border: 1px solid black;
+  overflow: hidden;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 100px;
+}
+
+.main-home  {
+
+  min-height: 200vh;
+}
+
+.caroussel {
+  background-image: url();
+  min-height: 100vh;
+  width: auto 
+
 }
