--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,14 @@
+
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,600;1,9..40,100;1,9..40,600&family=Montserrat:wght@100;400;600&family=Poppins:wght@100;500;600&family=Rubik:wght@500&display=swap');
+
+* {
+  max-width: 100%; /* Adjust as needed */
+  margin: 0 auto; /* Center align the container */
+}
+
+
 .background {
-  background-color: #919dad;
+  background-color: #2d3543;
   width: 100vw;
   min-height: 100vh;
   display: grid;
@@ -245,7 +254,7 @@ input[type="number"] {
   display: grid;
   grid-template-rows: 80px 1fr;
   grid-template-columns: 100vw;
-  /* min-height: 100vh; */
+ 
   background-color: inherit;
 }
 
@@ -255,35 +264,34 @@ input[type="number"] {
   top: 0px;
   overflow: hidden;
   width: 100%;
-  height: 80px;
-
+  height: 90px;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
+  z-index: 100
 }
 
 .main-home {
-  margin-top: 80px;
+  margin-top: 90px;
   min-height: 200vh;
+  width: 1fr;
 }
 
 .caroussel {
-  background-image: url("./images/carOne.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
   min-height: 800px;
-  width: 100vw;
+  width: 100%;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
 .logo {
   background-image: url("./images/roundLogoDark.png");
-  background-size: contain;
+  background-size:9rem;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .nav div {
-    border: 1px solid rgb(80, 18, 18);
+    /* border: 1px solid rgb(80, 18, 18); */
     display: grid;
     align-content: center;
 }
@@ -300,11 +308,206 @@ justify-content: center;
 .options li {
 list-style-type: none;
 
+display: grid;
+justify-content: center;
+height: 90px;
+}
+
+.options li a,
+.options li a:after,
+.options li a:before {
+  transition: all .5s;
+}
+.options li a:hover {
+  color: #555;
 }
 
 .options li a {
   text-decoration: none;
-  color: #d4d3d1;
+  color: #b5b9bc;
   align-self: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+}
+
+/* stroke */
+.options li a{
+  position: relative;
+}
+.options li a:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 0%;
+  content: '.';
+  color: transparent;
+  background: #aaa;
+  height: 1px;
+}
+.options li a:hover:after {
+  width: 100%;
+}
+
+.options li a {
+  transition: all 2s;
+}
+
+.options li a:after {
+  text-align: left;
+  content: '.';
+  margin: 0;
+  opacity: 0;
+}
+.options li a:hover {
+  color: #fff;
+  z-index: 1;
+}
+.options li a:hover:after {
+  z-index: -10;
+  animation: fill 1s forwards;
+  -webkit-animation: fill 1s forwards;
+  -moz-animation: fill 1s forwards;
+  opacity: 1;
+}
+
+
+.image {
+  width: 100px;
+  height: auto;
+}
+
+
+.blog-img {
+  object-fit: cover;
+  width: 100vw;
+}
+
+.carousselio {
+  display: flex;
+  height: 900px;
+  width: 100vw;
+  /* max-width: 800px; */
 
 }
+
+.caroussel-wrapper {
+  position: relative;
+  width: 100vw;
+  height: 100%;
+
+
+}
+
+.caroussel-card {
+  display: flex;
+  flex: 1;
+  position: absolute;
+  width: 100vw;
+  height: 100%;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  opacity: 0;
+  pointer-events: none;
+overflow:hidden;
+  transition: transform 0.5s, opacity 0.5s;
+}
+
+.card-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
+  display: flex;
+  padding-left: 920px;
+  padding-top: 560px;
+}
+
+.card-title {
+  color: #eaeef1;
+  font-size: 30px;
+  width: 450px;
+  font-family:'DM Sans', sans-serif;;
+  background-color: transparent;
+  height: fit-content;
+  line-height: 1.5;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  font-weight: 500;
+  padding-left: 20px;
+}
+
+.card-title.log-but {
+  color: #eaeef1;
+  font-size: 14px;
+  width: 200px;
+  font-family:'DM', sans-serif;;
+  background-color: #161a21;
+  height: 40px;
+
+margin-top: 160px;
+margin-left: 10px;
+  padding-left: 20px;
+}
+
+
+.caroussel-card-active {
+  opacity: 1;
+  transform: scale(1);
+  pointer-events: visible;
+
+}
+
+.caroussel-arrow-left, .caroussel-arrow-right {
+  position: absolute;
+  font-size: 40px;
+  top: 450px;
+  transform: translate(0, -50%);
+  background-color: gainsboro;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 20px;
+  border-radius: 50px;
+  cursor: pointer;
+  padding-bottom: 10px;
+}
+
+.caroussel-arrow-left {
+  left: 20px
+}
+.caroussel-arrow-right {
+  right: 20px
+
+}
+
+
+.caroussel-pagination {
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  align-items: center;
+  justify-items: center;
+}
+
+.pagination-dot {
+  height: 10px;
+  width: 10px;
+  background-color: #161a21;
+  display: inline-block;
+  margin-left: 10px;
+  cursor: pointer;
+  border-radius: 50%;
+  align-items: centers;
+
+}
+
+.pagination-dot:hover {
+  transform: scale(1.2);
+}
+
+.pagination-dot-active {
+  background-color: white;
+}
+
