--- a/src/components/styles/welcome.css
+++ b/src/components/styles/welcome.css
@@ -73,6 +73,7 @@ img {
   font-weight: 500;
   padding-left: 20px;
   padding-right: 20px;
+  line-height: 1.4;
 }
 
 /* Adjust the heights as needed */
@@ -143,4 +144,15 @@ min-height: 800px;
 .six {
   min-height: 450px;
 }
+
+.special {
+  font-size: 22px;
+  /* font-weight: 700 */
+}
+
+.specialy {
+  font-size: 20px;
+  /* font-weight: 700 */
+}
+
 
