--- a/src/components/style.css
+++ b/src/components/style.css
@@ -411,7 +411,7 @@ input[type="number"] {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   display: flex;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .card-title {
