--- a/src/components/styles/welcome.css
+++ b/src/components/styles/welcome.css
@@ -29,10 +29,27 @@
 }
 
 .info-card {
-
   overflow: hidden;
   display: grid;
 }
+
+.info-card:hover .text-tag {
+  opacity: 1;
+  transition-delay: 0.2s;
+}
+
+.info-card:hover img {
+  opacity: 0.15;
+  transition-delay: 0.2s;
+}
+
+.info-card:hover {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  transform: translateY(-5px);
+  transition: transform 0.8s
+}
+
+
 
 .header {
   font-weight: 800;
@@ -59,12 +76,21 @@ h2 {
   padding-top: 30px;
 }
 
+.info-card {
+  position: relative;
+  overflow: hidden;
+}
+
 img {
   height: 100%;
   width: auto;
   object-fit: contain;
   align-self: center;
   justify-self: center;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  transition: opacity 0.4s ease-in-out;
 }
 
 .text-tag {
@@ -74,6 +100,17 @@ img {
   padding-left: 20px;
   padding-right: 20px;
   line-height: 1.4;
+  opacity: 0;
+  position: absolute;
+  top: 110px;
+  transition: opacity 0.4s ease-in-out;
+
+}
+
+.text-tag {
+  opacity: 0;
+  transition: opacity 0.4s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition-delay: 0s;
 }
 
 /* Adjust the heights as needed */
@@ -153,6 +190,10 @@ min-height: 800px;
 .specialy {
   font-size: 20px;
   /* font-weight: 700 */
+}
+
+.larger {
+  font-size: 23px;
 }
 
 
