--- a/src/components/style.css
+++ b/src/components/style.css
@@ -6,7 +6,7 @@
 }
 
 .background {
-  background-color: #2d3543;
+  background-color: #f4f9fc;
   width: 100vw;
   min-height: 100vh;
   display: grid;
@@ -17,34 +17,36 @@
 .box {
   background-color: #ffefce;
   width: 60%;
-  height: 90%;
   align-self: center;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
-    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+
 }
 
 .right {
+
+  height: 100%;
+  width: 80%;
   display: grid;
-  background-image: url("../components/images/test.png");
+  background-image: url("../components/images/signUp1.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   place-self: right;
-  justify-self: start;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  justify-self: right;
+
 }
 
 .right.log {
+  
+  height: 100%;
+  width: 80%;
   display: grid;
-  background-image: url("../components/images/Login.png");
+  background-image: url("../components/images/login1.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   place-self: right;
-  justify-self: start;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  justify-self: right;
+
 }
 
 .left {
@@ -168,9 +170,7 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input[type="number"] {
-  -moz-appearance: textfield;
-}
+
 
 .movie-grid {
   display: grid;
@@ -246,6 +246,8 @@ input[type="number"] {
 }
 
 /* main home page */
+
+/* nav bar */
 .home-grid {
   display: grid;
   grid-template-rows: 80px 1fr;
@@ -261,7 +263,7 @@ input[type="number"] {
   overflow: hidden;
   width: 100%;
   height: 90px;
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  /* box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   z-index: 100;
@@ -273,17 +275,13 @@ input[type="number"] {
   width: 1fr;
 }
 
-
-
-.logo {
-  background-image: url("./images/roundLogoDark.png");
-  background-size: 9rem;
-  background-repeat: no-repeat;
-  background-position: center;
+.carls-log0 {
+object-fit: contain;
+height: 100px;
 }
 
+
 .nav div {
-  /* border: 1px solid rgb(80, 18, 18); */
   display: grid;
   align-content: center;
 }
@@ -319,7 +317,7 @@ input[type="number"] {
   font-size: 14px;
 }
 
-/* stroke */
+
 .options li a {
   position: relative;
 }
@@ -371,8 +369,22 @@ input[type="number"] {
   width: 100vw;
 }
 
+.right-nav {
+  display: grid;
+ justify-items: right;
+ padding-right: 20px;
+}
+
+.log-but.home {
+background-color: transparent;
+width: 40%;
+height: 120%;
+
+}
+
+/* caroussel */
+
 .caroussel {
-  /* min-height: 800px; */
   width: 100%;
 
 }
