--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,600;1,9..40,100;1,9..40,600&family=Montserrat:wght@100;400;600&family=Poppins:wght@100;500;600&family=Rubik:wght@500&display=swap");
 
+
+
 * {
-  max-width: 100%; 
+  max-width: 100%;
   margin: 0 auto;
 }
 
@@ -18,9 +20,7 @@
   background-color: #ffefce;
   width: 60%;
   align-self: center;
-
 }
-
 
 .box {
   font-size: 10px;
@@ -34,7 +34,6 @@
 }
 
 .right {
-
   height: 100%;
   width: 80%;
   display: grid;
@@ -44,11 +43,9 @@
   background-position: center;
   place-self: right;
   justify-self: right;
-
 }
 
 .right.log {
-  
   height: 100%;
   width: 80%;
   display: grid;
@@ -58,7 +55,6 @@
   background-position: center;
   place-self: right;
   justify-self: right;
-
 }
 
 .left {
@@ -120,12 +116,11 @@ h1 {
   font-size: 0.7rem;
 }
 
-.register, .login {
+.register,
+.login {
   display: grid;
   grid-template-columns: auto 1fr;
-
 }
-
 
 .formy {
   display: grid;
@@ -165,13 +160,11 @@ h1 {
   border: 1.5px solid #d6d5d5;
   border-radius: 10px;
   background-color: #f9fbfc;
-  /* height: 45px; */
   font-size: 10px;
-
 }
 
 .log-but {
-  background-color: #7b8895;
+  background-color: #191d3a;
   color: #ffffff;
   border: none;
   text-align: center;
@@ -190,8 +183,6 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-
-
 .movie-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(230px, min-content));
@@ -205,7 +196,6 @@ input::-webkit-inner-spin-button {
   grid-template-rows: 50px 50px 1fr;
   overflow: auto;
 }
-
 
 .log-but:hover {
   transform: translateY(-5px);
@@ -276,24 +266,23 @@ input::-webkit-inner-spin-button {
   top: 0px;
   overflow: hidden;
   width: 100%;
-  height: 90px;
-  /* box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
+  height: 70px;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   z-index: 100;
+  align-content: center;
 }
 
 .main-home {
-  margin-top: 90px;
+  margin-top: 70px;
   min-height: 200vh;
   width: 1fr;
 }
 
 .carls-log0 {
-object-fit: contain;
-height: 100px;
+  object-fit: contain;
+  height: 100px;
 }
-
 
 .nav div {
   display: grid;
@@ -330,7 +319,6 @@ height: 100px;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
 }
-
 
 .options li a {
   position: relative;
@@ -385,14 +373,53 @@ height: 100px;
 
 .right-nav {
   display: grid;
- justify-items: right;
- padding-right: 20px;
+  justify-items: right;
+  padding-right: 20px;
 }
 
 .log-but.home {
-background-color: transparent;
-width: 40%;
-height: 120%;
+  background-color: transparent;
+  width: 40%;
+  height: 120%;
+}
+
+.profile {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 10px;
+  align-items: center;
+  color: #fafafc;
+}
+
+.profile p {
+  font-size: 12px;
+}
+
+.remove-btn {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+.dropdown {
+  position: relative;
+}
+.dropdown-menu {
+  position: absolute;
+  right: 50px;
+  top: 10px;
+  background-color: #161a21;
+  padding: 0.75rem;
+  border-radius: 0.25rem;
+  opacity: 0;
+}
+
+.dropdown .link:focus + .dropdown-menu {
+  opacity: 1;
 
 }
 
@@ -400,7 +427,6 @@ height: 120%;
 
 .caroussel {
   width: 100%;
-
 }
 
 .carousselio {
@@ -532,4 +558,29 @@ height: 120%;
 
 .pagination-dot-active {
   background-color: white;
+}
+
+
+
+
+
+.error {
+  font-size: 13px;
+  color: red;
+  align-self: center;
+}
+
+@keyframes shake {
+  0% {
+    margin-left: 0rem;
+  }
+  25% {
+    margin-left: 0.5rem;
+  }
+  75% {
+    margin-left: -0.5rem;
+  }
+  100% {
+    margin-left: 0rem;
+  }
 }
