--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,600;1,9..40,100;1,9..40,600&family=Josefin+Sans:ital,wght@0,100;0,400;1,600;1,700&family=Montserrat:wght@100;400;600&family=Poppins:wght@100;500;600&family=Rubik:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,600;1,9..40,100;1,9..40,600&family=Josefin+Sans:ital,wght@0,100;0,400;1,600;1,700&family=Montserrat:wght@100;400;600&family=Poppins:wght@100;500;600&family=Rubik:wght@500&display=swap");
 
-
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap");
 
 * {
   max-width: 100%;
@@ -275,10 +275,9 @@ input::-webkit-inner-spin-button {
   width: 100%;
   height: 70px;
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 0.5fr 2fr 1.2fr 1fr;
   z-index: 100;
   align-content: center;
-
 }
 
 .main-home {
@@ -290,6 +289,7 @@ input::-webkit-inner-spin-button {
 .carls-log0 {
   object-fit: contain;
   height: 100px;
+  margin-left: 10px;
 }
 
 .nav div {
@@ -300,7 +300,8 @@ input::-webkit-inner-spin-button {
 .options {
   display: grid;
   grid-template-columns: repeat(6, 100px);
-  justify-content: center
+  justify-content: left;
+  padding: 0px;
 }
 
 .options li {
@@ -325,7 +326,7 @@ input::-webkit-inner-spin-button {
   color: #b5b9bc;
   align-self: center;
   font-family: "Poppins", sans-serif;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .options li a {
@@ -379,13 +380,10 @@ input::-webkit-inner-spin-button {
   width: 100vw;
 }
 
-
-
 .right-nav {
   display: grid;
   justify-items: right;
   padding-right: 20px;
-
 }
 
 .log-but.home {
@@ -431,7 +429,6 @@ input::-webkit-inner-spin-button {
 
 .dropdown .link:focus + .dropdown-menu {
   opacity: 1;
-
 }
 
 /* caroussel */
@@ -571,10 +568,6 @@ input::-webkit-inner-spin-button {
   background-color: white;
 }
 
-
-
-
-
 .error {
   font-size: 13px;
   color: red;
@@ -598,6 +591,204 @@ input::-webkit-inner-spin-button {
 
 .footer {
   display: grid;
+}
 
+#img-logo-footer {
+  display: grid;
+  align-self: flex-start;
+}
+
+.remove-border {
+  display: grid;
+  justify-content: right;
+}
+
+/* recipe view css */
+
+.recipe-view-main {
+  margin-top: 70px;
+  min-height: 650px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: auto;
+  background-color: #fafafc;
+}
+
+.recipe-left {
+  padding-top: 30px;
+  /* background-color: #96bce9; */
+  min-height: 650px;
+  padding-left: 30px;
+  max-width: 320px;
+}
+
+.recipe-right {
+  padding-top: 30px;
+  padding-left: 30px;
+  /* background-color: #b2cae7; */
+  min-height: 650px;
+}
+
+.recipe-img-rv {
+  width: 320px;
+  height: 450px;
+  object-fit: cover;
+}
+
+.recipe-title-rv {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+  color: black;
+  max-width: 450px;
+}
+
+.recipe-right div {
+  /* max-width: 450px; */
+}
+
+.ingredients-rc {
+  display: grid;
+  grid-template-columns: auto auto;
+  align-content: center;
+}
+
+.servings-rv {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-self: right;
+  column-gap: 5px;
+  height: 20px;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.ingredients-rc h2 {
+  display: grid;
+  align-self: center;
+  margin-top: 20px;
+}
+
+.servings-button {
+  width: 30px;
+  height: 30px;
+  color: #191d3a;
+  background-color: transparent;
+  border: 0.5px solid #d4dfed;
+  border-radius: 50%;
+
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.servings-button:hover {
+  background-color: #d0e0f5;
+}
+
+.number-servings-rc {
+  display: grid;
+  justify-content: center;
+}
+
+.ingredients-list-rc {
+  display: grid;
+
+  font-family: "Raleway", sans-serif;
+  font-weight: 450;
+  font-size: 15px;
+  color: black;
+  margin-bottom: 50px;
+  line-height: 30px;
+}
+
+.p-tag-ingredient {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  margin-bottom: 10px;
+  line-height: 20px;
+}
+
+.numeric-part {
+  text-align: left;
+}
+
+.course-type {
+  width: auto;
+  height: 30px;
+  color: #191d3a;
+  background-color: transparent;
+  border: 0.5px solid #d4dfed;
+  border-radius: 10px;
+  font-size: 11px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.course-type:hover {
+  background-color: #d0e0f5;
+}
+
+.icons {
+  display: grid;
+  width: 18px;
+  padding: 0px;
+  justify-content: center;
+  align-content: center;
+  
+}
+
+.course-type.icons{
+  justify-self: center;
+  align-self: center;
+}
+
+.tags-rc {
+  display: grid;
+  grid-template-columns: min-content repeat(4, 30px);
+
+}
+
+.time-rc {
+  font-size: 12px;
+  display: grid;
+  grid-template-columns: auto auto 1fr;
+  column-gap: 20px;
+  margin-top: 20px;
+  /* padding-left: 10px; */
+}
+
+.p-tag-instructions {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 20px;
+  margin-bottom: 10px;
+  line-height: 20px;
+  min-width: 1fr;
+  padding-right: 100px;
+  align-items: center;
+}
+
+.p-tag-instructions:hover > span {
+  /* background-color: #d0e0f5; */
+  /* border: 0.5px solid #d0e0f5; */
+  text-decoration: underline;
+  text-decoration-color: #191d3a;
+
+}
+
+.p-tag-instructions:active > span {
+
+  text-decoration:line-through;
+
+
+}
+.p-tag-instructions:hover > button {
+  background-color: #d0e0f5;
+  
 }
 
