--- a/src/components/styles/welcome.css
+++ b/src/components/styles/welcome.css
@@ -44,8 +44,8 @@
 
 .info-card:hover {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  transform: translateY(-5px);
-  transition: transform 0.8s;
+  /* transform: translateY(-5px); */
+  transition: opacity .6s cubic-bezier(.25,.1,.25,1);;
 }
 
 .header {
