commit for the week

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -624,9 +624,9 @@ input::-webkit-inner-spin-button {
 
 .recipe-right {
   padding-top: 30px;
-  padding-left: 30px;
-  /* background-color: #b2cae7; */
+
   min-height: 650px;
+  margin-bottom: 40px;
 }
 
 .recipe-img-rv {
@@ -645,9 +645,7 @@ input::-webkit-inner-spin-button {
   margin-bottom: 10px;
 }
 
-.recipe-right div {
-  /* max-width: 450px; */
-}
+
 
 .ingredients-rc {
   display: grid;
@@ -742,10 +740,9 @@ input::-webkit-inner-spin-button {
   padding: 0px;
   justify-content: center;
   align-content: center;
-  
 }
 
-.course-type.icons{
+.course-type.icons {
   justify-self: center;
   align-self: center;
 }
@@ -753,7 +750,6 @@ input::-webkit-inner-spin-button {
 .tags-rc {
   display: grid;
   grid-template-columns: min-content repeat(4, 30px);
-
 }
 
 .time-rc {
@@ -781,15 +777,11 @@ input::-webkit-inner-spin-button {
   /* border: 0.5px solid #d0e0f5; */
   text-decoration: underline;
   text-decoration-color: #191d3a;
-
 }
-
 
 .p-tag-instructions:hover > button {
   background-color: #d0e0f5;
-  
 }
-
 
 .decor {
   text-decoration: line-through;
@@ -804,19 +796,16 @@ input::-webkit-inner-spin-button {
 /* Account settings */
 
 .left-options-settings {
-margin-top: 20px;
-border-right: 3px solid #eeeeee;
-margin-bottom: 20px;
-margin-right: 20px;
+  margin-top: 20px;
+  border-right: 3px solid #eeeeee;
+  margin-bottom: 20px;
+  margin-right: 20px;
 }
 
 .right-settings {
   /* background-color: pink; */
   margin-top: 30px;
-
 }
-
-
 
 .settings-grid {
   margin-top: 70px;
@@ -833,10 +822,10 @@ margin-right: 20px;
   border-radius: 20px;
   height: 40px;
   font-weight: 400;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   margin-left: 20px;
   margin-top: 5px;
-  border: none
+  border: none;
 }
 
 .empty {
@@ -858,11 +847,11 @@ margin-right: 20px;
   color: red;
 }
 
-.option-setting-header{
+.option-setting-header {
   font-size: 16px;
 }
 
-.pic-and-name{
+.pic-and-name {
   display: grid;
   grid-template-columns: auto 1fr;
   border: 2px solid #eeeeee;
@@ -871,7 +860,7 @@ margin-right: 20px;
   padding: 10px;
 }
 
-.fullname  {
+.fullname {
   display: grid;
   align-items: center;
   margin-left: 20px;
@@ -889,7 +878,6 @@ margin-right: 20px;
   justify-self: right;
 }
 
-
 .personal-info h3 {
   margin: 0px;
   font-size: 14px;
@@ -897,7 +885,7 @@ margin-right: 20px;
   align-self: center;
 }
 
-.personal-info{
+.personal-info {
   margin-top: 20px;
   display: grid;
   /* grid-template-columns: auto 1fr; */
@@ -920,7 +908,6 @@ margin-right: 20px;
 .personal-edit button {
   /* display: grid; */
   justify-items: right;
-
 }
 
 .personal-details {
@@ -928,8 +915,8 @@ margin-right: 20px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   row-gap: 30px;
-margin-top: 10px;
-margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .detail-topic {
@@ -941,21 +928,21 @@ margin-bottom: 20px;
 .detail-user {
   font-size: 12px;
   font-weight: 600;
-
 }
 
 .pd-card {
-display: grid;
-row-gap: 5px;
+  display: grid;
+  row-gap: 5px;
 }
 
-.push-dow{
+.push-dow {
+  display: grid;
   margin-top: 40px;
   min-height: 650px;
 }
 
 .prep {
-  margin-top: 20px
+  margin-top: 20px;
 }
 
 .add-margin {
@@ -968,4 +955,16 @@ row-gap: 5px;
 
 .css-1waasse-MuiCardContent-root:last-child {
   padding-bottom: 0 !important;
+}
+
+.corner-right {
+  display: grid;
+  justify-items: right;
+  padding-right: 30px;
+  align-content: flex-end;
+
+  padding-bottom: 20px;
+  font-size: 10px;
+  text-align: center;
+  color: #afaeae;
 }
