--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,10 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,600;1,9..40,100;1,9..40,600&family=Josefin+Sans:ital,wght@0,100;0,400;1,600;1,700&family=Montserrat:wght@100;400;600&family=Poppins:wght@100;500;600&family=Rubik:wght@500&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,500&family=Poppins:wght@100;400;700&family=Raleway:wght@200;300;500&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400&family=Poppins:wght@100;400;700&family=Raleway:wght@200;300;500&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,300;1,400&family=Raleway:wght@200;300;500&display=swap');
 
 * {
   max-width: 100%;
   margin: 0 auto;
+}
+
+.brand {
+  color: #fafafc;
+  margin-left: 20px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+
+.p3 {
+  font-size: 13px;
+  color: #c5c5c6;
+  margin-bottom: 0px;
 }
 
 .background {
@@ -213,7 +230,6 @@ input::-webkit-inner-spin-button {
 
 .logout {
   display: grid;
-
   justify-items: right;
   align-content: center;
 }
@@ -475,7 +491,7 @@ input::-webkit-inner-spin-button {
 }
 
 .card-title {
-  color: #ffffff;
+  color: white;
   font-size: 36px;
   width: 550px;
   font-family: "DM Sans", sans-serif;
@@ -487,7 +503,7 @@ input::-webkit-inner-spin-button {
     rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
     rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
     rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-  font-weight: 500;
+  font-weight: 300;
   padding-left: 40px;
   margin-bottom: 150px;
 }
