--- a/src/components/style.css
+++ b/src/components/style.css
@@ -60,7 +60,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  place-self: right;
   justify-self: right;
 }
 
@@ -72,7 +71,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  place-self: right;
   justify-self: right;
 }
 
@@ -239,7 +237,6 @@ input::-webkit-inner-spin-button {
 .logout button {
   width: fit-content;
   height: 30px;
-  place-self: right;
   margin-top: 5px;
   margin-right: 20px;
   background-color: #96bce9;
@@ -300,8 +297,7 @@ input::-webkit-inner-spin-button {
 
 .main-home {
   margin-top: 70px;
-  /* min-height: 200vh; */
-  width: 1fr;
+  width: 100%;
 }
 
 .carls-log0 {
@@ -576,7 +572,7 @@ input::-webkit-inner-spin-button {
   margin-left: 10px;
   cursor: pointer;
   border-radius: 50%;
-  align-items: centers;
+  align-items: center;
 }
 
 .pagination-dot:hover {
@@ -786,7 +782,6 @@ input::-webkit-inner-spin-button {
   column-gap: 20px;
   margin-bottom: 10px;
   line-height: 20px;
-  min-width: 1fr;
   padding-right: 100px;
   align-items: center;
 }
