--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 
 
 body {
-  margin: 0;
+margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,3 +13,18 @@ code {
     monospace;
 }
 
+
+.section-wrapper {
+  position: relative;
+  z-index: 60;
+  max-width: 1150px;
+  margin: auto;
+  padding: 9.6rem;
+  overflow: hidden;
+}
+
+@media (max-width: 768px) {
+  .section-wrapper {
+    padding: 7.2rem 2.4rem;
+  }
+}
