--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,18 @@
-
-
 body {
-margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-    -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
+  padding-right: 0px !important;
+  overflow: auto !important;
+
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
 
 .section-wrapper {
   max-width: 1150px;
@@ -24,5 +24,6 @@ code {
 @media (max-width: 768px) {
   .section-wrapper {
     padding: 7.2rem 2.4rem;
+
   }
 }
