--- a/src/components/Hero/HeroAndInfo.module.css
+++ b/src/components/Hero/HeroAndInfo.module.css
@@ -38,17 +38,7 @@
   animation: slide-in-left 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
-@keyframes slide-in-left {
-  0% {
-    transform: translateX(-10px);
-    opacity: 0;
-  }
 
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
 
 .section h1 {
   display: grid;
@@ -58,12 +48,25 @@
   }
 }
 
-.smaller-text {
+.header {
+    font-weight: 800;
+    align-self: start;
+    font-size: 2.5rem;
+    color: #000000;
+    font-family: "Helvetica";
+    width: 600px;
+    padding-bottom: 100px;
+    max-width: 450px;
+  }
+
+.smallerText {
   margin-top: 20px;
   font-size: 1.1rem;
   font-weight: 600;
+  max-width: 450px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    
 }
 
 .backImage {
@@ -74,7 +77,7 @@
   background-size: cover;
 }
 
-.welcome-info {
+.welcomeInfo {
   display: grid;
   grid-template-columns: 4fr 5fr 4fr;
   column-gap: 2rem;
@@ -82,6 +85,7 @@
   padding: 40px;
   padding-top: 200px;
   padding-bottom: 200px;
+
   @media (max-width: 800px) {
     grid-template-columns: 1fr 1fr;
   }
@@ -90,7 +94,7 @@
   }
 }
 
-.info-card {
+.infoCard {
   flex: 1 1 auto;
   flex-direction: column;
   border-radius: 20px;
@@ -98,60 +102,26 @@
   height: 100%;
   justify-self: center;
   background-color: #ffffff;
+    overflow: hidden;
 }
 
-.info-card {
-  overflow: hidden;
-  display: grid;
-}
 
-.info-card:hover .text-tag {
+.infoCard:hover .textTag {
   opacity: 1;
-  transition-delay: 0.2s;
 }
 
-.info-card:hover img {
+.infoCard:hover img {
   opacity: 0.15;
-  transition-delay: 0.2s;
+  transition: opacity 0.4s cubic-bezier(0.25, 0.1, 0.25, 1) 0s;
 }
 
-.info-card:hover {
+.infoCard:hover {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  /* transform: translateY(-5px); */
-  transition: opacity 0.6s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: box-shadow 0.4s cubic-bezier(0.25, 0.1, 0.25, 1),
+    opacity 0.4s cubic-bezier(0.25, 0.1, 0.25, 1) 0.4s;
 }
 
-.header {
-  font-weight: 800;
-  align-self: start;
-  font-size: 2.5rem;
-  padding-left: 40px;
-  color: #000000;
-  font-family: "Helvetica";
-  width: 600px;
-  padding-bottom: 400px;
-}
-
-h2 {
-  font-size: 20px;
-  font-family: Inter, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
-  font-weight: 700;
-  line-height: 1.2;
-  letter-spacing: -0.2px;
-  margin: 0 0 1rem;
-}
-
-.info-card h2 {
-  padding-left: 20px;
-  padding-top: 30px;
-}
-
-.info-card {
-  position: relative;
-  overflow: hidden;
-}
-
-.text-tag {
+.textTag {
   font-size: 16px;
   font-family: Inter, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
   font-weight: 500;
@@ -164,93 +134,46 @@ h2 {
   transition: opacity 0.4s ease-in-out;
 }
 
-.text-tag {
+.textTag {
   opacity: 0;
-  transition: opacity 0.4s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: opacity 0.6s cubic-bezier(0.25, 0.1, 0.25, 1);
   transition-delay: 0s;
 }
 
-.info-card:nth-child(1) {
+
+
+
+.infoCard h2 {
+  padding-left: 20px;
+  padding-top: 30px;
+  font-size: 20px;
+  font-family: Inter, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -0.2px;
+  margin: 0 0 1rem;
+}
+
+.infoCard {
+  position: relative;
+  overflow: hidden;
+}
+
+
+.infoCard {
   height: 320px;
-}
-
-.info-card:nth-child(2) {
-  height: 320px;
-}
-
-.info-card:nth-child(3) {
-  height: 280px;
-}
-
-.info-card:nth-child(4) {
-  height: 380px;
-
-  align-self: end;
-}
-
-.info-card:nth-child(5) {
-  height: 280px;
-}
-.info-card:nth-child(6) {
-  height: 380px;
-  align-self: end;
-}
-
-.info-card {
-  /* margin-bottom: 2rem; */
-  /* padding: 10px; */
   padding-bottom: 10px;
-}
-
-.column-one {
-  display: grid;
-  min-height: 800px;
-}
-
-.one {
-  min-height: 360px;
-}
-
-.four {
-  min-height: 370px;
-}
-
-.four,
-.five,
-.six {
   align-self: end;
 }
 
-.column-two {
-  display: grid;
-  min-height: 800px;
-}
-
-.column-three {
-  display: grid;
-  min-height: 800px;
-}
-
-.three {
-  min-height: 320px;
-}
-
-.five {
-  min-height: 420px;
-}
-
-.six {
-  min-height: 400px;
-}
-
-.special {
-  font-size: 19px;
-}
-
-.specialy {
-  font-size: 17px;
-}
-
-.larger {
-  font-size: 23px;
-}
+@keyframes slide-in-left {
+    0% {
+      transform: translateX(-10px);
+      opacity: 0;
+    }
+  
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
