--- a/src/components/NavBar/Nav.module.css
+++ b/src/components/NavBar/Nav.module.css
@@ -1,31 +1,36 @@
 .nav {
-  background-color: #161a21;
-  position: fixed;
-  top: 0px;
-  overflow: hidden;
-  width: 100%;
-  height: 70px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
   align-items: center;
+  background-color: #161a21;
+  position: sticky;
+  top: 0;
   z-index: 100;
-  align-content: center;
+  padding: 0 20px;
+  margin: 0;
+  padding: 0px 9.6rem;
+  justify-content: center;
 }
+
+
 
 .maxWidth {
   max-width: 100px;
 }
 
+.nav > * {
+  max-width:1150px;
+  ;
+}
 .nav div {
   display: grid;
   align-content: center;
 }
 
 .carlsLogo {
-  object-fit: contain;
-  height: 100px;
-  margin-left: 10px;
+  object-fit: cover;
+  height: 100%;
+  width: 100px;
+  object-position: left;
 }
 
 .logButtonHome {
@@ -171,8 +176,7 @@
 }
 
 .mobile {
-display:none;
-
+  display: none;
 
   @media (max-width: 450px) {
     display: content;
