--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,14 @@ code {
   overflow: hidden;
 }
 
+.nav-wrapper {
+  max-width: 1150px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0px 9.6rem;
+
+}
+
 @media (max-width: 768px) {
   .section-wrapper {
     padding: 7.2rem 2.4rem;
