--- a/src/components/Hero/HeroAndInfo.module.css
+++ b/src/components/Hero/HeroAndInfo.module.css
@@ -57,6 +57,11 @@
     width: 600px;
     padding-bottom: 100px;
     max-width: 450px;
+
+    @media(max-width:450px){
+      font-size: 2rem;
+      max-width: 100vw;
+    }
   }
 
 .smallerText {
@@ -66,7 +71,10 @@
   max-width: 450px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    
+    @media(max-width:450px){
+      font-size: 1rem;
+      max-width: 60vw;
+    }
 }
 
 .backImage {
