--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,10 @@ code {
 
 @media (max-width: 768px) {
   .section-wrapper {
-    padding: 7.2rem 2.4rem;
+    padding: 7.2rem 1.4rem;
+    margin: 0px;
 
   }
 }
+
+
