--- a/src/components/style.css
+++ b/src/components/style.css
@@ -63,7 +63,6 @@
   @media (max-width: 450px) {
     display: none;
   }
-
 }
 
 .righty.log {
@@ -287,15 +286,10 @@ input::-webkit-inner-spin-button {
   background-color: inherit;
 }
 
-
 .main-home {
   margin-top: 70px;
   width: 100%;
 }
-
-
-
-
 
 .image {
   width: 100px;
@@ -474,7 +468,7 @@ input::-webkit-inner-spin-button {
   left: 50%;
   align-items: center;
   justify-items: center;
-  @media(max-width:450px){
+  @media (max-width: 450px) {
     left: 35%;
   }
 }
@@ -528,38 +522,48 @@ input::-webkit-inner-spin-button {
   align-self: flex-start;
 }
 
-
-
 /* recipe view css */
 
 .recipe-view-main {
-  margin-top: 70px;
   min-height: 650px;
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: auto;
-  background-color: #fafafc;
+  grid-auto-flow: column;
+  column-gap: 3rem;
+  @media (max-width: 450px) {
+    grid-auto-flow: row;
+  }
 }
 
 .recipe-left {
   padding-top: 30px;
-  /* background-color: #96bce9; */
   min-height: 650px;
   padding-left: 30px;
   max-width: 320px;
+  @media (max-width: 450px) {
+    padding-left: 0px;
+    padding-top: 0px;
+    max-width: none;
+  }
 }
 
+.forDeskTop {
+  @media (max-width: 450px) {
+    display: none;
+  }
+}
 .recipe-right {
   padding-top: 30px;
-
   min-height: 650px;
   margin-bottom: 40px;
 }
 
 .recipe-img-rv {
-  width: 320px;
+  width: 100%;
   height: 420px;
   object-fit: cover;
+  @media (max-width:450px) {
+    margin-top: 20px;
+  }
 }
 
 .recipe-title-rv {
@@ -574,8 +578,9 @@ input::-webkit-inner-spin-button {
 
 .ingredients-rc {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-auto-flow: column;
   align-content: center;
+  margin-bottom: 20px;
 }
 
 .servings-rv {
@@ -624,7 +629,7 @@ input::-webkit-inner-spin-button {
   font-weight: 450;
   font-size: 15px;
   color: black;
-  margin-bottom: 50px;
+
   line-height: 30px;
 }
 
@@ -692,7 +697,6 @@ input::-webkit-inner-spin-button {
   column-gap: 20px;
   margin-bottom: 10px;
   line-height: 20px;
-  padding-right: 100px;
   align-items: center;
 }
 
@@ -875,6 +879,17 @@ input::-webkit-inner-spin-button {
 
 .instruction-list {
   margin-top: 70px;
+  @media (max-width: 450px) {
+    margin-top: 0px;
+  }
+}
+
+.hide {
+  display: none;
+  @media (max-width: 450px) {
+    display: contents;
+    padding-bottom: 300px;
+  }
 }
 
 .css-1waasse-MuiCardContent-root:last-child {
